# AI_Secretary_System

./: .dockerignore  .env.docker  .env.docker.example  .env.example  .gitignore  .pre-commit-config.yaml  00_START_HERE.txt  AI_Secretary.bat  AI_Secretary.desktop  ARCHITECTURE.md  BACKLOG.md  CHANGELOG.md  CHEATSHEET.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SYSTEM_DOCS.md  admin.py  admin_web.html  alembic.ini  analyze_dataset.py  apply_patches.py  augment_dataset.py  auth_manager.py  bridge_manager.py  chat_sessions.json  cloud_llm_service.py  deploy.sh  docker-compose.cpu.yml  docker-compose.full.yml  docker-compose.yml  examples.md  finetune_manager.py  lidia-admin  llm_service.py  model_manager.py  (+34 more)
.claude/skills/пр/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml
admin/: .env.demo  .env.demo-web  .eslintrc.cjs  .gitignore  .prettierrc  index.html  nginx-demo.conf  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
admin/docs/: ADMIN_PANEL_SESSION_LOG.md
admin/public/: manifest.json  sw.js
admin/src/: App.vue  env.d.ts  main.ts  router.ts
admin/src/api/: amocrm.ts  audit.ts  bot-sales.ts  chat.ts  client.ts  faq.ts  finetune.ts  gsm.ts  index.ts  llm.ts  models.ts  monitor.ts  services.ts  stt.ts  telegram.ts  tts.ts  ttsFinetune.ts  usage.ts  whatsapp.ts  widget.ts  wikiRag.ts
admin/src/api/demo/: amocrm.ts  audit.ts  auth.ts  botSales.ts  chat.ts  faq.ts  finetune.ts  gsm.ts  index.ts  llm.ts  (+12 more)
admin/src/assets/: main.css
admin/src/components/: AccordionNav.vue  BranchTree.vue  BranchTreeNode.vue  ConfirmDialog.vue  ErrorBoundary.vue  SearchPalette.vue  ThemeToggle.vue  ToastContainer.vue
admin/src/composables/: index.ts  useExportImport.ts  useGpuStats.ts  useRealtimeMetrics.ts  useResponsive.ts  useSSE.ts
admin/src/plugins/: i18n.ts
admin/src/stores/: audit.ts  auth.ts  confirm.ts  index.ts  llm.ts  search.ts  services.ts  settings.ts  theme.ts  toast.ts  tts.ts
admin/src/views/: AboutView.vue  AuditView.vue  ChatView.vue  CrmView.vue  DashboardView.vue  FaqView.vue  FinetuneView.vue  GSMView.vue  LlmView.vue  LoginView.vue  ModelsView.vue  MonitoringView.vue  SalesView.vue  ServicesView.vue  SettingsView.vue  TelegramView.vue  TtsView.vue  UsageView.vue  WhatsAppView.vue  WidgetView.vue
alembic/: env.py
alembic/versions/: 20260126_0001_initial_schema.py
app/: __init__.py  cors_middleware.py  dependencies.py  rate_limiter.py  security_headers.py
app/routers/: __init__.py  amocrm.py  audit.py  auth.py  backup.py  bot_sales.py  chat.py  faq.py  github_webhook.py  gsm.py  legal.py  llm.py  monitor.py  services.py  stt.py  telegram.py  tts.py  usage.py  whatsapp.py  widget.py  wiki_rag.py  yoomoney_webhook.py
app/services/: amocrm_service.py  audio_pipeline.py  backup_service.py  embedding_provider.py  gsm_service.py  sales_funnel.py  wiki_rag_service.py  yoomoney_service.py
db/: __init__.py  database.py  integration.py  models.py  redis_client.py
db/repositories/: __init__.py  amocrm.py  audit.py  base.py  bot_ab_test.py  bot_agent_prompt.py  bot_discovery.py  bot_event.py  bot_followup.py  bot_github.py  bot_hardware.py  bot_instance.py  bot_quiz.py  bot_segment.py  bot_subscriber.py  bot_testimonial.py  bot_user_profile.py  chat.py  cloud_provider.py  config.py  consent.py  faq.py  gsm.py  knowledge_document.py  llm_preset.py  payment.py  preset.py  telegram.py  usage.py  user.py  whatsapp_instance.py  widget_instance.py
docs/: ADMIN_PANEL_SESSION_LOG.md  BOT_SYNC_ARCHITECTURE.md  IMPROVEMENT_PLAN.md  WORKFLOW.md  server-claude-memory-template.md
finetune/: .gitignore  CLAUDE.md  README.md  merge_lora.py  prepare_dataset.py  quantize_awq.py  train.py
scripts/: amocrm_proxy.py  benchmark_streaming_tts.py  docker-entrypoint.sh  manage_users.py  migrate_add_payment_fields.py  migrate_amocrm.py  migrate_chat_branches.py  migrate_gemini_to_cloud.py  migrate_gsm_tables.py  migrate_json_to_db.py  migrate_knowledge_base.py  migrate_legal_compliance.py  migrate_persona_rename.py  migrate_rate_limit.py  migrate_sales_bot.py  migrate_to_instances.py  migrate_user_ownership.py  migrate_users.py  migrate_whatsapp.py  migrate_widget_placeholder_style.py  seed_tz_generator.py  seed_tz_widget.py  setup_db.sh  sync_telegram_bot.py  test_db.py
scripts/migrations/: add_auto_start.sql
services/bridge/: .env.example  README.md  requirements.txt  start.sh
services/bridge/src/: __init__.py
telegram_bot/: __init__.py  __main__.py  bot.py  config.py  state.py
telegram_bot/handlers/: __init__.py  callbacks.py  commands.py  files.py  messages.py  news.py  tz.py
telegram_bot/handlers/sales/: __init__.py  basic.py  common.py  custom.py  diy.py  payment.py  quiz.py  welcome.py
telegram_bot/middleware/: __init__.py  access.py
telegram_bot/prompts/: smm_news.md
telegram_bot/sales/: __init__.py  database.py  keyboards.py  segments.py  states.py  texts.py
telegram_bot/services/: __init__.py  github_news.py  llm_router.py  session_store.py  social_proof.py  stream_renderer.py
telegram_bot/utils/: __init__.py  chunking.py  formatting.py
web-widget/: README.md  ai-chat-widget.js
whatsapp_bot/: __init__.py  __main__.py  bot.py  config.py  state.py
whatsapp_bot/handlers/: __init__.py  interactive.py  messages.py
whatsapp_bot/handlers/sales/: __init__.py  basic.py  custom.py  diy.py  quiz.py  router.py  welcome.py
whatsapp_bot/sales/: __init__.py  database.py  keyboards.py  texts.py
whatsapp_bot/services/: __init__.py  llm_router.py  session_store.py  whatsapp_client.py
wiki-pages/: API-Reference.md  Audit.md  Backup.md  CRM.md  Chat.md  Cloud-AI-Training.md  Cloud-LLM-Providers.md  Dashboard.md  Deployment-Profiles.md  FAQ.md  Finetune.md  GSM.md  Home.md  Installation.md  LLM.md  Models.md  Monitoring.md  Payments.md  Personas.md  Prompts.md  README.md  Sales.md  Services.md  Settings.md  TTS.md  Telegram.md  Troubleshooting.md  Usage.md  VLESS-Proxy.md  WhatsApp.md  Widget.md  Wiki-RAG.md  _Sidebar.md
(+40 files in other folders)
